--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^10.0.6",
+    "rehype-highlight": "^7.0.1",
+    "remark-gfm": "^4.0.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
